--- a/app/views/admin/settings/index.html.erb
+++ b/app/views/admin/settings/index.html.erb
@@ -1,10 +1,15 @@
-<%= form_for @preferenec do |f| %>
-  <%= f.label :artist_sort_order %>
-  <%= f.check_box :artist_sort_order %>
-
-  <%= f.label :song_sort_order %>
-  <%= f.check_box :song_sort_order %>
-
-  <%= f.submit %>
-
+<%= form_for @preference, url: admin_settings_path(@preference)  do |f| %>
+  <div>
+    <%= f.label :song_sort_order %>:<br>
+    DESC: <%= f.radio_button :song_sort_order, "DESC" %>
+    ASC: <%= f.radio_button :song_sort_order, "ASC" %>
+  </div>
+  <div>
+    <%= f.label :artist_sort_order %>:<br>
+    DESC: <%= f.radio_button :artist_sort_order, "DESC" %>
+    ASC: <%= f.radio_button :artist_sort_order, "ASC" %>
+  </div>
+  <div>
+    <%= f.submit %>
+  </div>
 <% end %>
